--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="styleshhet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
-    <h1>Es un titulo</h1>
-    <p>es un parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Es un titulo para pruebas</h1>
+            <p>es un parrafo rellenando de contenido</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
