Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Es un titulo para pruebas</h1>
             <p>es un parrafo rellenando de contenido</p>
