--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Es un titulo para pruebas</h1>
