--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,9 @@
         <div id="post">
             <h1>Es un titulo para pruebas</h1>
             <p>es un parrafo rellenando de contenido</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor iure quas fugit expedita inventore aliquam enim ad deserunt harum quasi sapiente reprehenderit veritatis provident, consectetur aut modi dolorem magnam esse!
+            </p>
         </div>
     </div>
 
