Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,16 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de confianza</span>
+            Hyperblog <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Es un titulo para pruebas</h1>
             <p>es un parrafo rellenando de contenido</p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor iure quas fugit expedita inventore aliquam enim ad deserunt harum quasi sapiente reprehenderit veritatis provident, consectetur aut modi dolorem magnam esse!
+            </p>
+            <p>
+                Suscribete
             </p>
         </div>
     </div>
